--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,8 @@
 $text-main: #222;
+$text-light: #b9b9b9;
+$font-main: "Geometria", "Arial", sans-serif;
 $text-second: #9d9d9d;
 $color-primary: #e02d71;
 $bg-second: #fff;
 
-$transition: all .2s ease;
-
-
+$transition: all 0.2s ease;
