breadcrumbs added, global styles edited

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+@import './styles/button';
+@import './styles/form';
+@import './styles/content';
+
 @font-face {
   font-display: swap;
   font-weight: 300;
