--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 $text-main: #222;
 $text-light: #b9b9b9;
 $font-main: "Geometria", "Arial", sans-serif;
+$font-second: 'Circe', 'Arial', sans-serif;
 $text-second: #9d9d9d;
 $color-primary: #e02d71;
 $bg-second: #fff;
