--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -10,6 +10,7 @@
 
   font-family: $font-second;
   vertical-align: middle;
+  text-align: center;
   text-transform: uppercase;
   font-weight: 700;
   cursor: pointer;
