--- a/src/style.scss
+++ b/src/style.scss
@@ -1,63 +1,8 @@
 @charset "UTF-8";
+@import './styles/fonts';
 @import './styles/button';
 @import './styles/form';
 @import './styles/content';
-
-@font-face {
-  font-display: swap;
-  font-weight: 300;
-  font-family: 'Geometria';
-  font-style: normal;
-  src: url('../fonts/Geometria-Light.woff2') format('woff2');
-}
-
-@font-face {
-  font-display: swap;
-  font-weight: 400;
-  font-family: 'Geometria';
-  font-style: normal;
-  src: url('../fonts/Geometria-Regular.woff2') format('woff2');
-}
-
-@font-face {
-  font-display: swap;
-  font-weight: 500;
-  font-family: 'Geometria';
-  font-style: normal;
-  src: url('../fonts/Geometria-Medium.woff2') format('woff2');
-}
-
-@font-face {
-  font-display: swap;
-  font-weight: 700;
-  font-family: 'Geometria';
-  font-style: normal;
-  src: url('../fonts/Geometria-Bold.woff2') format('woff2');
-}
-
-@font-face {
-  font-display: swap;
-  font-weight: 900;
-  font-family: 'Geometria';
-  font-style: normal;
-  src: url('../fonts/Geometria-ExtraBold.woff2') format('woff2');
-}
-
-@font-face {
-  font-display: swap;
-  font-weight: 400;
-  font-family: 'Circe';
-  font-style: normal;
-  src: url('../fonts/Circe-Regular.woff2') format('woff2');
-}
-
-@font-face {
-  font-display: swap;
-  font-weight: 700;
-  font-family: 'Circe';
-  font-style: normal;
-  src: url('../fonts/Circe-Bold.woff2') format('woff2');
-}
 
 html {
   box-sizing: border-box;
