asset urls fixed for build

--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -50,7 +50,7 @@
         transform: translateY(-50%);
         width: 14px;
         height: 7px;
-        background-image: url('../img/svg/icon-arrow-bottom.svg');
+        background-image: url('/img/svg/icon-arrow-bottom.svg');
         background-repeat: no-repeat;
         background-size: contain;
       }
