--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -3,7 +3,7 @@
   font-weight: 300;
   font-family: 'Geometria';
   font-style: normal;
-  src: url('../fonts/Geometria-Light.woff2') format('woff2');
+  src: url('/fonts/Geometria-Light.woff2') format('woff2');
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-weight: 400;
   font-family: 'Geometria';
   font-style: normal;
-  src: url('../fonts/Geometria-Regular.woff2') format('woff2');
+  src: url('/fonts/Geometria-Regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -19,7 +19,7 @@
   font-weight: 500;
   font-family: 'Geometria';
   font-style: normal;
-  src: url('../fonts/Geometria-Medium.woff2') format('woff2');
+  src: url('/fonts/Geometria-Medium.woff2') format('woff2');
 }
 
 @font-face {
@@ -27,7 +27,7 @@
   font-weight: 700;
   font-family: 'Geometria';
   font-style: normal;
-  src: url('../fonts/Geometria-Bold.woff2') format('woff2');
+  src: url('/fonts/Geometria-Bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -35,7 +35,7 @@
   font-weight: 900;
   font-family: 'Geometria';
   font-style: normal;
-  src: url('../fonts/Geometria-ExtraBold.woff2') format('woff2');
+  src: url('/fonts/Geometria-ExtraBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -43,7 +43,7 @@
   font-weight: 400;
   font-family: 'Circe';
   font-style: normal;
-  src: url('../fonts/Circe-Regular.woff2') format('woff2');
+  src: url('/fonts/Circe-Regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -51,5 +51,5 @@
   font-weight: 700;
   font-family: 'Circe';
   font-style: normal;
-  src: url('../fonts/Circe-Bold.woff2') format('woff2');
+  src: url('/fonts/Circe-Bold.woff2') format('woff2');
 }
